--- a/octoprint_timelapseplus/templates/timelapseplus_settings.jinja2
+++ b/octoprint_timelapseplus/templates/timelapseplus_settings.jinja2
@@ -113,6 +113,16 @@
             <hr>
 
             <div class="control-group">
+                <label class="control-label">URL Path</label>
+                <div class="controls">
+                    <input type="text" data-bind="value: settings.plugins.timelapseplus.webcamUrlPath">
+                    <span class="help-block">You can add a Custom URL Path if the default doesn't work</span>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="control-group">
                 <label class="control-label">Test Settings</label>
                 <div class="controls">
                     <span class="help-block">You can test the FFmpeg and FFprobe paths as well as the snapshot capture here:</span>
